@@ -1,37 +1,22 @@
 NAME
-    CPAN::Mini::Tested - create a CPAN mirror using modules that have passed
-    tests
+    CPAN::Mini::Tested - Create a CPAN mirror using modules with passing test 
+    reports
 
 REQUIREMENTS
     This module is designed for Perl 5.6.1. The following non-core
     modules are required:
 
       Cache::Simple::TimedExpiry
+      Config
       CPAN::Mini
       DBI
       DBD::SQLite
       LWP
       Regexp::Assemble
 
-Installation
-    Installation can be done using the traditional Makefile.PL or the
-    newer Build.PL methods.
+INSTALLATION
 
-    Using Makefile.PL:
-
-      perl Makefile.PL
-      make
-      make test
-      make install
-
-    (On Windows platforms you should use nmake instead.)
-
-    Using Build.PL (if you have Module::Build installed):
-
-      perl Build.PL
-      perl Build
-      perl Build test
-      perl Build install
+    See the INSTALL file for detailed installation instructions.
 
 SYNOPSYS
       use CPAN::Mini::Tested;
@@ -55,34 +40,25 @@ DESCRIPTION
     See the module documentation for more information.
 
 REVISION HISTORY
-    The following changes were made since the previous public release:
-
-    0.22 Mon Apr  4 2005
-	- fixed misuse of Pod::Coverage tests
-	- documented inherited methods
 
     See the Changes file for a detailed revision history.
 
-DSLIP
-  b - Beta testing
-  d - Developer
-  p - Perl-only
-  O - Object oriented
-  p - Standard Perl
-
-See <http://cpan.uwinnipeg.ca/htdocs/faqs/dslip.html>
-
-AUTHOR
-    Robert Rothenberg <rrwo at cpan.org>
-
-COPYRIGHT AND LICENSE
-    Copyright (C) 2005 by Robert Rothenberg. All Rights Reserved.
-
-    This library is free software; you can redistribute it and/or modify it
-    under the same terms as Perl itself, either Perl version 5.8.3 or, at
-    your option, any later version of Perl 5 you may have available.
-
 SEE ALSO
+
     CPAN::Mini
 
     CPAN Testers <http://testers.cpan.org>
+
+AUTHOR
+    
+    Robert Rothenberg <rrwo at cpan.org>
+
+    Barbie <barbie@cpan.org>
+
+COPYRIGHT AND LICENSE
+  
+    Copyright (C) 2005-2014 by Robert Rothenberg.  All Rights Reserved.
+    Copyright (C) 2014      by Barbie.
+
+    This distribution is free software; you can redistribute it and/or
+    modify it under the Artistic Licence v2.
